test/corpus/bugs.txt
================================================================================
Bug 001
================================================================================

\Cref{thm:1.3.16} settles the issue of solvability of equations $\lambda u -
\Delta u = f$ in $W_2^2$. To get prepared for treating more general elliptic
equations by using the ideas from Section 1.4, we need the following
multiplicative inequalities. Everywhere in this section
$$
    \Omega = \R^d\qquad\hbox{or}\qquad \Omega = \R_+^d.
$$

useenv thm { \label{thm:1.5.1}
For any $p \in [1,\infty)$ and $u \in W_p^2(\Omega)$ we have
useenv equation { \label{eq:1.5.1.1}
    \|u_x\|_{L_p(\Omega)} \leq
    N\|u\|_{L_p(\Omega)}^{1/2}\|u_{xx}\|_{L_p(\Omega)}^{1/2},
}
where $N$ is independent of $u$.
}

useenv coro { \label{coro:1.5.2}
For any $p \in [1,\infty)$ and $\epsilon > 0$ there exists a constant $N$ such
that if $u \in W_p^2(\Omega)$, then
$$
    \|u_x\|_{L_p(\Omega)} \leq \epsilon\|u\|_{L_p(\Omega)} + N\|u_{xx}\|_{L_p(\Omega)}.
$$
In addition, one can take $N = N_0\epsilon^{-1}$, where $N_0$ is independent of
$\epsilon$ and $u$.
}

--------------------------------------------------------------------------------

(vesti_content
      (latex_function
        (latex_function_name)
        (brace_group
          (vesti_content
            (text
              (word)))))
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word))
      (inline_math)
      (text
        (word))
      (inline_math)
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word))
      (display_math)
      (useenv_decl
        (KEYWORD_useenv)
        (env_name)
        (brace_group
          (vesti_content
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (useenv_decl
              (KEYWORD_useenv)
              (env_name)
              (brace_group
                (vesti_content
                  (latex_function
                    (latex_function_name)
                    (brace_group
                      (vesti_content
                        (text
                          (word)))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)
                    (subscript
                      (letter)))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (text
                            (word)
                            (subscript
                              (letter)))
                          (paren_group
                            (vesti_content
                              (latex_function
                                (latex_function_name))))))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (text
                            (word)
                            (subscript
                              (letter)))
                          (paren_group
                            (vesti_content
                              (latex_function
                                (latex_function_name)))))))
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)
                    (subscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (text
                            (word)
                            (subscript
                              (letter)))
                          (paren_group
                            (vesti_content
                              (latex_function
                                (latex_function_name)))))))
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word)))))
                    (word)))))
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)))))
      (useenv_decl
        (KEYWORD_useenv)
        (env_name)
        (brace_group
          (vesti_content
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (display_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word))))))

================================================================================
Bug 002
================================================================================

useenv thm { \label{thm:12.7.1}
    In $\R^d--\{0\}$ the distribution $G(x)$ coincides with an infinitely
    differentiable function denoted in a common abuse of notation again by
    $G(x)$. For any multiindex $\alpha$ and $n>0$ we have
    $$
        |D^\alpha G(x)| = o(|x|^{-n})
    $$
    as $|x| -> oo$. Furthermore, for any multiindices $\alpha$ and $\beta$ such
    that
    useenv equation { \label{eq:12.7.1.1}
        \mu + |\beta| > d + |\alpha|
    }
    in the sense of distributions we have
    useenv equation { \label{eq:12.7.1.2}
        x^\beta D^\alpha G(x) = {i^{|\alpha|+|\beta|}//(2\pi)^d}
        \int_{\R^d}e^{ix\cdot\xi}D^\beta?[{\xi^\alpha // \sigma(\xi)}]?d\xi,
    }
    where the right hand side is a bounded and continuous function.
    \proof
    First we prove that both parts of \cref{eq:12.7.1.2} coincides as
    distributions and the right hand side of \cref{eq:12.7.1.2} is a bounded and
    continuous function. By \Cref{lemma:12.6.2} in the sense of distributions
    useenv equation { \label{eq:12.7.1.3}
        {i^{|\alpha|+|\beta|}//(2\pi)^d}
        \int_{|\xi|<=R}e^{ix\cdot\xi}D^\beta[\xi^\alpha\sigma^{-1}(\xi)]d\xi
        -> x^\beta D^\alpha G(x)
    }
    as $R->oo$. Next, observe that $\xi^\alpha\sigma^{-1}$ is a symbol of order
    $|\alpha|-\mu$, and hence
    $$
        |D^\beta[\xi^\alpha\sigma^{-1}]|
        <= N(1+|\xi|^2)^{(|\alpha|-\mu-|\beta|)/2}.
    $$
    Here the right hand side lies in $L_1$ because of \cref{eq:12.7.1.1},
    hence the left hand side of \cref{eq:12.7.1.3} \it{uniformly} on
    $\R^d$ converges to the right hand side of \cref{eq:12.7.1.2}. Indeed,
    $$
        \sup_{x\in\R^d} ?|
        {i^{|\alpha|+|\beta|}//(2\pi)^d}
        ?(\int_{|\xi|<=R}e^{ix\cdot\xi}D^\beta[\xi^\alpha\sigma^{-1}(\xi)]d\xi
        - \int_{\R^d}e^{ix\cdot\xi}D^\beta[\xi^\alpha\sigma^{-1}(\xi)]d\xi
        )?|?
        <= {1//(2\pi)^d}\int_{|\xi|>R}|D^\beta[\xi^\alpha\sigma^{-1}]|d\xi
        -> 0
    $$
    as $R->oo$. Particularly, the right hand side of \cref{eq:12.7.1.2} is
    bounded and continuous.
    The uniform convergence implies the convergence in the sense of
    distributions by the dominated convergence theorem, and this yields
    \cref{eq:12.7.1.2}. We have proved the third assertion of the theorem.

    Next, for any integer $r=0,1,2,...$ the function $|x|^{2r}$ is a polynomial
    in $x$. It follows that if $\mu+2r > d + |\alpha|$, then
    useenv equation { \label{eq:12.7.1.4}
        |x|^{2r}D^\alpha G(x) = {i^{|\alpha|}//(2\pi)^d}
        \int_{\R^d}e^{ix\cdot\xi}(-\Delta)^r[\xi^\alpha\sigma^{-1}(\xi)]d\xi,
    }
    where the right hand side is bounded and continuous.\footnote{
        We already proved this at the begining of this proof.
    } Since we can take $r$ as large as we want, outside the origin the
    distributions $D^\alpha G$ coincide with continuous functions for any
    $\alpha$. By using \Cref{exe:12.5.2}, we conclude that the distribution $G$
    coincides outside the origin with an infinitely differentiable function.
    That $|D^\alpha G(x)|=o(|x|^{-2r})$ as $|x| ->oo$ for any $r>0$ follows from
    \cref{eq:12.7.1.4} and the Riemann-Lebesgue lemma since
    $(-\Delta)^r[\xi^\alpha\sigma^{-1}(\xi)]\in L_1$. This proves the theorem.
    \proved
}

--------------------------------------------------------------------------------

(vesti_content
      (useenv_decl
        (KEYWORD_useenv)
        (env_name)
        (brace_group
          (vesti_content
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (display_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (useenv_decl
              (KEYWORD_useenv)
              (env_name)
              (brace_group
                (vesti_content
                  (latex_function
                    (latex_function_name)
                    (brace_group
                      (vesti_content
                        (text
                          (word)))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)
                    (word)
                    (word)
                    (word)
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (useenv_decl
              (KEYWORD_useenv)
              (env_name)
              (brace_group
                (vesti_content
                  (latex_function
                    (latex_function_name)
                    (brace_group
                      (vesti_content
                        (text
                          (word)))))
                  (text
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word))
                  (paren_group
                    (vesti_content
                      (text
                        (word))))
                  (text
                    (word))
                  (brace_group
                    (vesti_content
                      (text
                        (word)
                        (superscript
                          (brace_group
                            (vesti_content
                              (text
                                (word))
                              (latex_function
                                (latex_function_name))
                              (text
                                (word))
                              (latex_function
                                (latex_function_name))
                              (text
                                (word)))))
                        (word))
                      (paren_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))))
                      (text
                        (superscript
                          (letter)))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (latex_function
                            (latex_function_name))
                          (text
                            (superscript
                              (letter))))))
                    (word)
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))
                          (latex_function
                            (latex_function_name)))))
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word))
                  (sqparen_group
                    (vesti_content
                      (brace_group
                        (vesti_content
                          (latex_function
                            (latex_function_name))
                          (text
                            (superscript
                              (latex_function
                                (latex_function_name)))
                            (word))
                          (latex_function
                            (latex_function_name))
                          (paren_group
                            (vesti_content
                              (latex_function
                                (latex_function_name))))))))
                  (text
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (useenv_decl
              (KEYWORD_useenv)
              (env_name)
              (brace_group
                (vesti_content
                  (latex_function
                    (latex_function_name)
                    (brace_group
                      (vesti_content
                        (text
                          (word))))
                    (brace_group
                      (vesti_content
                        (text
                          (word)
                          (superscript
                            (brace_group
                              (vesti_content
                                (text
                                  (word))
                                (latex_function
                                  (latex_function_name))
                                (text
                                  (word))
                                (latex_function
                                  (latex_function_name))
                                (text
                                  (word)))))
                          (word))
                        (paren_group
                          (vesti_content
                            (text
                              (word))
                            (latex_function
                              (latex_function_name))))
                        (text
                          (superscript
                            (letter))))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))
                          (text
                            (word)))))
                    (word)
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))
                          (latex_function
                            (latex_function_name)))))
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name))))
                  (sqparen_group
                    (vesti_content
                      (latex_function
                        (latex_function_name))
                      (text
                        (superscript
                          (latex_function
                            (latex_function_name))))
                      (latex_function
                        (latex_function_name))
                      (text
                        (superscript
                          (brace_group
                            (vesti_content
                              (text
                                (word))))))
                      (paren_group
                        (vesti_content
                          (latex_function
                            (latex_function_name))))))
                  (text
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word))
                  (paren_group
                    (vesti_content
                      (text
                        (word)))))))
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word))
            (display_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word))
            (display_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (useenv_decl
              (KEYWORD_useenv)
              (env_name)
              (brace_group
                (vesti_content
                  (latex_function
                    (latex_function_name)
                    (brace_group
                      (vesti_content
                        (text
                          (word)))))
                  (text
                    (word)
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word)))))
                    (word)
                    (superscript
                      (latex_function
                        (latex_function_name)))
                    (word))
                  (paren_group
                    (vesti_content
                      (text
                        (word))))
                  (text
                    (word))
                  (brace_group
                    (vesti_content
                      (text
                        (word)
                        (superscript
                          (brace_group
                            (vesti_content
                              (text
                                (word))
                              (latex_function
                                (latex_function_name))
                              (text
                                (word)))))
                        (word))
                      (paren_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))))
                      (text
                        (superscript
                          (letter)))))
                  (latex_function
                    (latex_function_name))
                  (text
                    (subscript
                      (brace_group
                        (vesti_content
                          (latex_function
                            (latex_function_name))
                          (text
                            (superscript
                              (letter))))))
                    (word)
                    (superscript
                      (brace_group
                        (vesti_content
                          (text
                            (word))
                          (latex_function
                            (latex_function_name))
                          (latex_function
                            (latex_function_name))))))
                  (paren_group
                    (vesti_content
                      (text
                        (word))
                      (latex_function
                        (latex_function_name))))
                  (text
                    (superscript
                      (letter)))
                  (sqparen_group
                    (vesti_content
                      (latex_function
                        (latex_function_name))
                      (text
                        (superscript
                          (latex_function
                            (latex_function_name))))
                      (latex_function
                        (latex_function_name))
                      (text
                        (superscript
                          (brace_group
                            (vesti_content
                              (text
                                (word))))))
                      (paren_group
                        (vesti_content
                          (latex_function
                            (latex_function_name))))))
                  (text
                    (word))
                  (latex_function
                    (latex_function_name))
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word))
            (latex_function
              (latex_function_name)
              (brace_group
                (vesti_content
                  (text
                    (word)))))
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (inline_math)
            (text
              (word)
              (word)
              (word)
              (word)
              (word))
            (latex_function
              (latex_function_name))))))

